--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -18,10 +21,13 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+   "plugins": [
+        "react"
+    ],
+    "rules": {
+        "react/jsx-uses-vars": "error",
+        "react/jsx-uses-react": "error"
+    }
   },
   "browserslist": {
     "production": [
@@ -34,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.37.1"
   }
 }
